Fixed web pages  based on crit session
Refined home, shop, support and detailed product pages.
Made footer responsive.
Added write review section.
Revised styleguide.

--- a/about.html
+++ b/about.html
@@ -25,70 +25,66 @@
 		<!----- Top Nav ----->
 		<header>
 			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
-			 <nav class="grid topnav">
-		          <div class="grid-col-1of2 logo">
+			 <nav class="grid">
+		          <div class="col-1of2 logo">
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 
-            	  <div class="grid-col-1of6 search-bar">
+            	  <!-- <div class="col-1of6 search-bar">
 						<input type="text" id="search" name="search" placeholder="Search...">
-            	  </div>
+            	  </div> -->
 
-                  <div class="grid-col-1of6">
+                  <div class="col-1of6">
                     	<a href="shop.html">Shop</a>
                   </div>
-                  <div class="grid-col-1of6">
+                  <div class="col-1of6">
                       	<a href="about.html">About</a>
                   </div>
-                  <div class="grid-col-1of6">
+                  <div class="col-1of6">
                      	 <a href="support.html">Support</a>
                   </div>
 <!--                   <div class="grid-col-1of6">
                      	 <a href="#">Contact</a>
                   </div> -->
 
-                   <div class="grid-col-1of6">
+                   <div class="col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
             	  </div>
-	      </nav>
+	      	</nav>
 		</header>
 
-		<section class ="about">
-			<div class ="hero">
-				<div class="text">
-					<h1>Meet your friendly neighbourhood garden.</h1>
-				</div>
+		<section class ="about hero">
+			<div class="hero-text">
+				<h1>Meet your friendly neighbourhood garden.</h1>
 			</div>
 			<!-- <div class = "hero-about col-1of2-reverse">
 				<img src="img/product-mod-image.png " alt="Photo of bouquet of flowers being held by a woman">
 			</div> -->
-		<p class="about-desc">
+		<!-- <p class="about-desc">
 			We are a family owned and operated full-service floral shop based in Vancouver, BC. creating bespoke floral arrangements for any type of occasions. We have been committed to offering only the freshest and finest floral arrangements and gifts with friendly and timely customer service support. Your support has continued to...
-		</p>
+		</p> -->
 		</section>
 
 		<!----- Values---->
-		<section class ="values">
-			<div class ="grid ">
+		<section class ="values grid">
 				<div class ="values col-1of3">
 					<img src="img/icons/family.png" alt="Icon of a family">
-					<h3 class="web">Family owned & operated</h3>
+					<h3>Family owned & operated</h3>
 					<p> We are a multigenerational business that has served Vancouver for over 25 years. </p>
 				</div>
 
 				<div class ="values col-2of3">
 					<img src="img/icons/earth-truck.png" alt="Icon of a truck with earth on it">
-					<h3 class="web">Local</h3>
-					<p>We work with a network of local growers to support low-carbon arigiculture. </p>
+					<h3>Local</h3>
+					<p>We work with a network of local growers to support low-carbon argriculture. </p>
 				</div>
 
 				<div class ="values col-3of3">
 					<img src="img/icons/care.png" alt="Icon of a hands capturing a heart">
-					<h3 class="web">Bespoke</h3>
+					<h3>Bespoke</h3>
 					<p>We consider the details and idiosyncrasies that make each bouquet different and unique.</p>
 				</div>
 
-			</div>  <!--.grid ends -->
 		</section>
 
 		<!----- Location ---->
@@ -110,8 +106,7 @@
  -->
 
 		<!----- Footer----->
-		 <div class="container-footer">
-
+		 <section class="main-footer grid">
 			 <div class="child-footer about">
 				 <h3 class="web">ABOUT FOUR SEASONS FLORAL</h3>
 				 <p>We are a family-owned and full-service floral shop
@@ -123,24 +118,27 @@
 
 			 <div class="child-footer location">
 				 <h3 class="web">VISIT US</h3>
-				 <p>3375 Kingsway #102, 
+				 <p>102 3375 Kingsway
 					Vancouver, B.C. 
 					 V5R 5K6  </p>
 			</div>
 
-			<div class="child-footer contact">
+			 <div class="child-footer contact">
 				 <h3 class="web">CONTACT US</h3>
 				 <p>(604) 738-0678</p>
 				 <p><i class="fab fa-instagram"></i> Instagram</p>
 				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
 			 </div>
-	 	</div>
+		 	</div>
+	 	</section>
 
-	 	<div class="sub-footer">
-	 		<p>Made with love in Vancouver, B.C.</p>
-	 		<a href="styleguide.html" target="_blank"> Styleguide</a>
-	 		<a href="citations.html" target="_blank"> Citations</a>
-	 	</div>
+ 		<div class="sub-footer">
+	 		<p>	Made with love in Vancouver, B.C.
+	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
+	 			<a href="citations.html" target="_blank"> Citations</a>
+	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
+	 		</p>
+ 		</div>
 
 	</body>
 
