--- a/cart.html
+++ b/cart.html
@@ -25,25 +25,25 @@
 		<!----- Top Nav ----->
 		<header>
 			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
-			 <nav class="grid topnav">
-		          <div class="grid-col-1of2 logo">
+			 <nav class="grid">
+		          <div class="col-1of2 logo">
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 
-            	  <div class="grid-col-1of6 search-bar">
+<!--             	  <div class="col-1of6 search-bar">
 						<input type="text" id="search" name="search" placeholder="Search...">
             	  </div>
-
-                  <div class="grid-col-1of6">
+ -->
+                  <div class="col-1of6">
                     	<a href="shop.html">Shop</a>
                   </div>
-                  <div class="grid-col-1of6">
+                  <div class="col-1of6">
                       	<a href="about.html">About</a>
                   </div>
-                  <div class="grid-col-1of6">
+                  <div class="col-1of6">
                      	 <a href="support.html">Support</a>
                   </div>
-                   <div class="grid-col-1of6">
+                   <div class="col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
             	  </div>
 	      </nav>
@@ -62,8 +62,7 @@
       </div>
 
 		<!----- Footer----->
-		 <div class="container-footer">
-
+		 <section class="main-footer grid">
 			 <div class="child-footer about">
 				 <h3 class="web">ABOUT FOUR SEASONS FLORAL</h3>
 				 <p>We are a family-owned and full-service floral shop
@@ -86,13 +85,16 @@
 				 <p><i class="fab fa-instagram"></i> Instagram</p>
 				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
 			 </div>
-	 	</div>
+		 	</div>
+	 	</section>
 
-	 	<div class="sub-footer">
-	 		<p>Made with love in Vancouver, B.C.</p>
-	 		<a href="styleguide.html" target="_blank"> Styleguide</a>
-	 		<a href="citations.html" target="_blank"> Citations</a>
-	 	</div>
+ 		<div class="sub-footer">
+	 		<p>	Made with love in Vancouver, B.C.
+	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
+	 			<a href="citations.html" target="_blank"> Citations</a>
+	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
+	 		</p>
+ 		</div>
 
 	</body>
 
