--- a/citations.html
+++ b/citations.html
@@ -83,13 +83,19 @@
 
 					<li>Spratt, Annie. Flowers in a vase [Photo]. Retrieved from <a href="https://unsplash.com/photos/ogIeKzjVAlg">https://unsplash.com/photos/ogIeKzjVAlg</a></li>
 
-					<li> User [Icon]. Retrieved from <a href="https://material.io/resources/icons/">https://material.io/resources/icons/</a></li>
+					<li> User [Icon]. Retrieved from <a href="https://material.io/resources/icons/">https://material.io/resources/icons</a></li>
 
-					<li> Shopping Cart [Icon]. Retrieved from <a href="https://material.io/resources/icons/">https://material.io/resources/icons/</a></li>
+					<li> Shopping Cart [Icon]. Retrieved from <a href="https://material.io/resources/icons/">https://material.io/resources/icons</a></li>
 
 					<li>Ottink, Dennis. Woman in wedding dress holding bouquet [Photo]. Retrieved from <a href="https://unsplash.com/photos/4hYZpT4dP9w">https://unsplash.com/photos/4hYZpT4dP9w</a></li>
 
 					<li>Spratt, Annie. Top half of bouquet in a brown background [Photo]. Retrieved from <a href="https://unsplash.com/photos/TIAsSpkuxws">https://unsplash.com/photos/TIAsSpkuxws</a></li>
+
+					<li> Family [Icon]. Retrieved from <a href="https://thenounproject.com/term/family/1309526/">https://thenounproject.com/term/family/1309526</a></li>
+
+					<li> Earth Truck [Icon]. Retrieved from <a href="hhttps://thenounproject.com/term/sustainable-transport/2942855//">https://thenounproject.com/term/sustainable-transport/2942855</a></li>
+
+					<li> Hands Heart [Icon]. Retrieved from <a href="https://thenounproject.com/term/care/1309510/">https://thenounproject.com/term/care/1309510</a></li>
 				</ul>
 
 		</section> 
