--- a/shop.html
+++ b/shop.html
@@ -25,43 +25,41 @@
 		<!----- Top Nav ----->
 		<header>
 			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
-			 <nav class="grid topnav">
-		          <div class="grid-col-1of2 logo">
+			 <nav class="grid">
+		          <div class="col-1of2 logo">
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 
-            	  <div class="grid-col-1of6 search-bar">
+            	  <!-- <div class="grid-col-1of6 search-bar">
 							<input type="text" id="search" name="search" placeholder="Search...">
-            	  </div>
+            	  </div> -->
 
-                  <div class="grid-col-1of6">
+                  <div class="col-1of6">
                     	<a href="shop.html">Shop</a>
                   </div>
-                  <div class="grid-col-1of6">
+                  <div class="col-1of6">
                       	<a href="about.html">About</a>
                   </div>
-                  <div class="grid-col-1of6">
+                  <div class="col-1of6">
                      	 <a href="support.html">Support</a>
                   </div>
 
-                   <div class="grid-col-1of6">
+                   <div class="col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
             	  </div>
 	      </nav>
 		</header>
 
 		<!----- Introduction----->
-		<section class="shop">
-			<div class="hero">
-				<div class="text">
+		<section class="shop hero">
+				<div class="hero-text">
 					<h1>Celebrate with nature.</h1>
 					<p>The simple pleasures in life are timeless, no matter how you celebrate them. </p>
 				</div>
-			</div>
 		</section>
 
 		<!----- Products ---->
-		<div class ="grid products">
+		<section class ="grid products">
 				<div class ="product-item col-1of3">
 				  	 <img src="img/product-lovers-sunrise.png" alt="Photo of Lover's Sunrise bouquet">
 				  	  <p class="product-name">Lover's Sunrise</p>
@@ -88,9 +86,9 @@
 							<a class ="btn-quick-add" href="#"> + Quick Add </a>
 				 	  </div>
 				</div>
-		</div>
+		</section>
 
-		<div class ="grid products">
+		<section class ="grid products">
 			<div class ="product-item col-1of3">
 			  	 <img src="img/nemo-bouquet.png" alt="Photo of orange and blue bouquet">
 			  	  <p class="product-name">Just Keep Swimming</p>
@@ -117,11 +115,10 @@
 						<a class ="btn-quick-add" href="#"> + Quick Add </a>
 			 	  </div>
 			</div>
-		</div>
+		</section>
 
 		<!----- Footer----->
-		 <div class="container-footer">
-
+		 <section class="main-footer grid">
 			 <div class="child-footer about">
 				 <h3 class="web">ABOUT FOUR SEASONS FLORAL</h3>
 				 <p>We are a family-owned and full-service floral shop
@@ -133,7 +130,7 @@
 
 			 <div class="child-footer location">
 				 <h3 class="web">VISIT US</h3>
-				 <p>3375 Kingsway #102, 
+				 <p>102 3375 Kingsway
 					Vancouver, B.C. 
 					 V5R 5K6  </p>
 			</div>
@@ -144,13 +141,16 @@
 				 <p><i class="fab fa-instagram"></i> Instagram</p>
 				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
 			 </div>
-	 	</div>
+		 	</div>
+	 	</section>
 
-	 	<div class="sub-footer">
-	 		<p>Made with love in Vancouver, B.C.</p>
-	 		<a href="styleguide.html" target="_blank"> Styleguide</a>
-	 		<a href="citations.html" target="_blank"> Citations</a>
-	 	</div>
+ 		<div class="sub-footer">
+	 		<p>	Made with love in Vancouver, B.C.
+	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
+	 			<a href="citations.html" target="_blank"> Citations</a>
+	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
+	 		</p>
+ 		</div>
 
 	</body>
 
