Made all pages responsive
Still need to work on:
- Footer on all pages
- 3 tiles on home page in tablet mode

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 				<div class ="values col-2of3">
 					<img src="img/icons/earth-truck.png" alt="Icon of a truck with earth on it">
 					<h3>Local</h3>
-					<p>We work with a network of local growers to support low-carbon argriculture. </p>
+					<p>We work with a network of local growers to support low-carbon agriculture. </p>
 				</div>
 
 				<div class ="values col-3of3">
