--- a/detailed-product.html
+++ b/detailed-product.html
@@ -53,10 +53,10 @@
 		<!----- Detailed Product ----->
 		<section class="detailed-product grid">
 			<div class="product-img col-1of2">
-				<img src="img/product-lovers-sunrise.jpg" alt="Photo of Lover's Sunrise bouquet">
+				<img src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
 			</div>
 			<div class="product-desc col-2of2">
-				<div class= "top-level">
+				<div class= "container-title">
 					<h2>Lover's Sunrise</h2>
 					<h2 class="price"> $100.00 </h2>
 				</div>
@@ -98,7 +98,7 @@
 
 	      	  <button class="btn-main">Write a Review</button>
 
-	      	  <div class="form">
+	      	  <div class="review form">
 					<form action="/action_page.php">
 
 					<div class="personal-details">
