--- a/styleguide.html
+++ b/styleguide.html
@@ -296,7 +296,7 @@
 										  &lt;p class ="price">$70.99&lt;/p&gt;<br>
 										  <!-- <div class="overlay"></div>	 -->
 										  &lt;div class="btn-position"&gt;<br>
-												&lt;a class ="btn-quick-add" href="#"> + Quick Add &lt;/a&gt;<br>
+												&lt;a class ="btn-add" href="#"> + Quick Add &lt;/a&gt;<br>
 									 	  &lt;/div&gt;<br>
 									&lt;/figure&gt;<br>
 							&lt;/div&gt;<br>
@@ -309,7 +309,7 @@
 							  	  <p class="product-name">Lavender Dreams</p>
 								  <p class ="price">$40.99</p>
 								  <div class="btn-position">
-										<a class ="btn-quick-add" href="#"> + Quick Add </a>
+										<a class ="btn-add" href="#"> + Quick Add </a>
 							 	  </div>
 							</div>
 						</section>
