--- a/support.html
+++ b/support.html
@@ -49,7 +49,7 @@
 	      </nav>
 		</header>
 
-		<section class ="about hero">
+		<section class ="faq hero">
 			<div class="hero-text">
 				<h1>Frequently Asked Questions</h1>
 			</div>
