--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<title>Four Seasons Floral Homepage</title>
 
 		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
-    	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -68,7 +68,7 @@
 		<!-- <div class ="grid"> -->
 			<div class ="menu">
 				<a href="shop.html">
-					<img src="img/pattern.png" alt="Photo of peonies">
+					<img src="img/patterns/pattern.png" alt="Photo of peonies">
 					<p>Flowers</p>
 				</a>
 			</div>
@@ -76,14 +76,14 @@
 
 			<div class ="menu">
 				<a href="shop.html">
-					<img src="img/pattern-2.png" alt="Photo of a green plant">
+					<img src="img/patterns/pattern-2.png" alt="Photo of a green plant">
 					<p>Plants</p>
 				</a>
 			</div>
 
 			<div class ="menu">
 				<a href="shop.html">
-					<img src="img/pattern-3.png" alt="Photo of flowers in a tin barrel">
+					<img src="img/patterns/pattern-3.png" alt="Photo of flowers in a tin barrel">
 					<p>Services</p>
 				</a>
 			</div>
