--- a/shop.html
+++ b/shop.html
@@ -54,66 +54,61 @@
 		<section class="shop hero">
 				<div class="hero-text">
 					<h1>Celebrate with nature.</h1>
-					<p>The simple pleasures in life are timeless, no matter how you celebrate them. </p>
+					<p>The simple pleasures in life are timeless. Nature's gifts are a thoughtful way to appreciate and celebrate your loved ones. </p>
 				</div>
 		</section>
 
 		<!----- Products ---->
 		<section class ="grid products">
 				<div class ="product-item col-1of3">
-				  	 <img src="img/product-lovers-sunrise.png" alt="Photo of Lover's Sunrise bouquet">
-				  	  <p class="product-name">Lover's Sunrise</p>
-					  <p class ="price">$45.99</p>
-					  <div class="btn-position">
-							<a class ="btn-quick-add" href="detailed-product.html"> + Quick Add </a>
-				 	  </div>
+				  	 <img src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
+				  	  <!-- <div class="container-title"> -->
+				  	 	 <p class="product-name">Lover's Sunrise</p>
+				  	  <!-- </div> -->
+					 	 <p class ="price">$45.99</p>
+					 	 <a class ="btn-add" href="detailed-product.html"> + Add </a>
+
+					  <!-- <div class="btn-position">
+							<a class ="btn-add" href="detailed-product.html"> + Quick Add </a>
+				 	  </div> -->
 				</div>
 
 				<div class ="product-item col-2of3">
-				  	 <img src="img/red-bouquet.jpg" alt="Photo of red bouquet">
+				  	 <img src="img/products/red-bouquet.jpg" alt="Photo of red bouquet">
 				  	  <p class="product-name">Radiantly Rouge</p>
 					  <p class ="price">$55.99</p>
-					  <div class="btn-position">
-							<a class ="btn-quick-add" href="#"> + Quick Add </a>
-				 	  </div>
+					  <a class ="btn-add" href="detailed-product.html"> + Add </a>
+
 				</div>
 
 				<div class ="product-item col-3of3">
-				  	 <img src="img/light-pink-bouquet.jpg" alt="Photo of light pink bouquet">
+				  	 <img src="img/products/light-pink-bouquet.jpg" alt="Photo of light pink bouquet">
 				  	  <p class="product-name">English Gardens</p>
 					  <p class ="price">$48.99</p>
-					  <div class="btn-position">
-							<a class ="btn-quick-add" href="#"> + Quick Add </a>
-				 	  </div>
+					  <a class ="btn-add" href="detailed-product.html"> + Add </a>
 				</div>
-		</section>
+		<!-- </section> -->
 
-		<section class ="grid products">
+		<!-- <section class ="grid products"> -->
 			<div class ="product-item col-1of3">
-			  	 <img src="img/nemo-bouquet.png" alt="Photo of orange and blue bouquet">
+			  	 <img src="img/products/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
 			  	  <p class="product-name">Just Keep Swimming</p>
 				  <p class ="price">$45.99</p>
-				  <div class="btn-position">
-						<a class ="btn-quick-add" href="#"> + Quick Add </a>
-			 	  </div>
+				  <a class ="btn-add" href="detailed-product.html"> + Add </a>
 			</div>
 
 			<div class ="product-item col-2of3">
-			  	 <img src="img/lavender-bouquet.jpg" alt="Photo of purple bouquet">
+			  	 <img src="img/products/lavender-bouquet.jpg" alt="Photo of purple bouquet">
 			  	  <p class="product-name">Lavender Dreams</p>
 				  <p class ="price">$40.99</p>
-				  <div class="btn-position">
-						<a class ="btn-quick-add" href="#"> + Quick Add </a>
-			 	  </div>
+				  <a class ="btn-add" href="detailed-product.html"> + Add </a>
 			</div>
 
 			<div class ="product-item col-2of3">
-			  	 <img src="img/lavender-bouquet.jpg" alt="Photo of purple bouquet">
-			  	  <p class="product-name">Lavender Dreams</p>
-				  <p class ="price">$40.99</p>
-				  <div class="btn-position">
-						<a class ="btn-quick-add" href="#"> + Quick Add </a>
-			 	  </div>
+			  	 <img src="img/products/summer-bouquet.jpg" alt="Photo of purple bouquet">
+			  	  <p class="product-name">Spirit of Summer</p>
+				  <p class ="price">$44.99</p>
+				 <a class ="btn-add" href="detailed-product.html"> + Add </a>
 			</div>
 		</section>
 
