Added 2nd detailed product listing page
For "Radiantly Rouge" bouquet

--- a/shop.html
+++ b/shop.html
@@ -77,7 +77,7 @@
 				  	 <img src="img/products/red-bouquet.jpg" alt="Photo of red bouquet">
 				  	  <p class="product-name">Radiantly Rouge</p>
 					  <p class ="price">$55.99</p>
-					  <a class ="btn-add" href="detailed-product.html"> + Add </a>
+					  <a class ="btn-add" href="detailed-product-2.html"> + Add </a>
 
 				</div>
 
