--- a/shop-plants.html
+++ b/shop-plants.html
@@ -7,10 +7,10 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Four Seasons Floral Homepage</title>
+		<title>Shop</title>
 
 		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
-    	 <meta name="viewport" content="width=device-width, initial-scale=1">
+    	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -26,16 +26,12 @@
 		<header>
 			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
 			 <nav class="grid">
-		          <div class="logo col-1of2 ">
+		          <div class="col-1of2 logo">
 		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 
-            	 <!--  <div class="grid-col-1of6 search-bar">
-						<input type="text" id="search" name="search" placeholder="Search...">
-            	  </div> -->
-
-            	  <!--  <div class="col-1of1 search-bar">
-						<input type="text" id="search" name="search" placeholder="Search...">
+            	  <!-- <div class="grid-col-1of6 search-bar">
+							<input type="text" id="search" name="search" placeholder="Search...">
             	  </div> -->
 
                   <div class="col-1of6">
@@ -47,77 +43,51 @@
                   <div class="col-1of6">
                      	 <a href="support.html">Support</a>
                   </div>
+
                    <div class="col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
             	  </div>
 	      </nav>
 		</header>
 
-		<!----- Hero Banner----->
-		<section class ="home hero">
-			<div class="hero-text">
-				<h1>Spread happiness with summer's blooms.</h1>
-				<a href="shop.html">
-					<button type="button" class="btn-main"> Shop Bouquets</button>
-				</a>
-			</div>
+		<!----- Introduction----->
+		<section class="shop hero">
+				<div class="hero-text">
+					<h1>Step up your plant game.</h1>
+					<p>Brighten up your living spaces with low-maintenance plants. Don't have a green thumb? These little ones can stay alive without frequent watering. </p>
+				</div>
 		</section>
 
-		<!----- Product/Service Offerings---->
-		<section class ="categories grid">
-		<!-- <div class ="grid"> -->
-			<div class ="menu">
-				<a href="shop.html">
-					<img src="img/patterns/pattern.png" alt="Pattern floral background">
-					<p>Flowers</p>
-				</a>
-			</div>
+		<!----- Products ---->
+		<section class ="grid products">
+				<div class ="product-item col-1of3">
+				  	 <img src="img/products/mong-bui.jpg" alt="Photo of an aloe succulent">
+				  	  <!-- <div class="container-title"> -->
+				  	 	 <p class="product-name">Aloe Succulent</p>
+				  	  <!-- </div> -->
+					 	 <p class ="price">$9.99</p>
+					 	 <a class ="btn-add" href="detailed-product.html"> + Add </a>
 
+					  <!-- <div class="btn-position">
+							<a class ="btn-add" href="detailed-product.html"> + Quick Add </a>
+				 	  </div> -->
+				</div>
 
-			<div class ="menu">
-				<a href="shop-plants.html">
-					<img src="img/patterns/pattern-2.png" alt="Pattern plant background">
-					<p>Plants</p>
-				</a>
-			</div>
+				<div class ="product-item col-2of3">
+				  	 <img src="img/products/alex-loup.jpg" alt="Photo of eucalyptus">
+				  	  <p class="product-name">Eucalyptus</p>
+					  <p class ="price">12.99</p>
+					  <a class ="btn-add" href="detailed-product-2.html"> + Add </a>
 
-			<div class ="menu">
-				<a href="shop.html">
-					<img src="img/patterns/pattern-3.png" alt="Pattern leaf background">
-					<p>Services</p>
-				</a>
-			</div>
-		</div>
+				</div>
+
+				<div class ="product-item col-3of3">
+				  	 <img src="img/products/charles-deluvio.jpg" alt="Photo of light pink bouquet">
+				  	  <p class="product-name">Cactus</p>
+					  <p class ="price">5.99</p>
+					  <a class ="btn-add" href="detailed-product.html"> + Add </a>
+				</div>
 		</section>
-
-		<!----- Alternating Content ----->
-		<section class="alternating-content grid">
-			<div class ="alternating-content-img col-1of2">
-				<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
-			</div>
-			<div class ="alternating-content-text col-2of2">
-				<h2>Home grown.</h2>
-				<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to our customers.</p>
-				<a href="shop.html">
-					<button type="button" class="btn-main">learn more</button>
-				</a>
-			</div>
-		</section>
-
-		<!-- <div class="grid"> -->
-		<section class="alternating-content grid">
-			<div class ="alternating-content-text col-1of2">
-				<h2>The gift of giving.</h2>
-				<p>Give one of nature’s most beautiful gifts to the people who mean the most to you.</p>
-				<a href="shop.html">
-						<button type="button" class="btn-main">shop flowers</button>
-				</a>
-			</div>
-			<div class ="alternating-content-img col-2of2">
-				<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
-			</div>
-		</section>
-	<!-- </div> -->
 
 		<!----- Footer----->
 		 <section class="main-footer grid">
