Added location details to about us page

--- a/about.html
+++ b/about.html
@@ -88,22 +88,24 @@
 		</section>
 
 		<!----- Location ---->
-	<!-- 	<section class = "location">
-			<div class ="alternating-content col-1of2">
-				<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
-			</div>
-			<div class ="alternating-content col-2of2">
-				<h2>Our location</h2>
-				<p>#102-3375 Kingsway</p>
-				<p>Vancouver, B.C.</p>
-				<p>V5R 5K6</p>
-				<p>(604) 738-0678 </p>
-				<p>We’re open Monday to Fridays from 10am to 5pm.</p>
-				<p>Instagram</p>
-				<p>Facebook</p>
-			</div>
+		<section class="alternating-content grid">
+			<section class="location">
+				<div class ="alternating-content-img col-1of2">
+					<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
+				</div>
+				<div class ="alternating-content-text col-2of2">
+					<h2>Our location</h2>
+					<p>#102-3375 Kingsway</p>
+					<p>Vancouver, B.C.</p>
+					<p>V5R 5K6</p>
+					<p>(604) 738-0678 </p>
+					<p><i class="fab fa-instagram"></i> Instagram</p>
+					<p><i class="fab fa-facebook-f"></i> Facebook</p>
+					<p>We’re open Monday to Fridays from 10am to 5pm.</p>
+				</div>
+			</section>
 		</section>
- -->
+
 
 		<!----- Footer----->
 		 <section class="main-footer grid">
@@ -126,7 +128,9 @@
 			 <div class="child-footer contact">
 				 <h3 class="web">CONTACT US</h3>
 				 <p>(604) 738-0678</p>
-				 <p><i class="fab fa-instagram"></i> Instagram</p>
+				 <p><i class="fab fa-instagram"></i> 
+				 	<a href="https://www.instagram.com/fourseasonsfloristry"> Instagram</a>
+				 </p>
 				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
 			 </div>
 		 	</div>
