--- a/citations.html
+++ b/citations.html
@@ -15,17 +15,6 @@
 	</head>
 
 	<body>
-		<!-- <header> -->
-		<!--Navigation Bar-->
-			 <!-- <nav class="grid styleguide">
-				<a href="index.html">Home</a>
-				<a href="sitemap.html">Site Map</a>
-				<a href="wireframes.html">Wireframes</a>
-				<a href="styleguide.html">Styleguide</a>
-				<a href="citations.html">Citations</a>
-			</nav> 
-		</header> -->
-
 		<section class="citations">
 			<h1> Citations </h1>
 			<p> A list of references that have been used for this project.</p>
@@ -96,6 +85,12 @@
 					<li> Earth Truck [Icon]. Retrieved from <a href="hhttps://thenounproject.com/term/sustainable-transport/2942855//">https://thenounproject.com/term/sustainable-transport/2942855</a></li>
 
 					<li> Hands Heart [Icon]. Retrieved from <a href="https://thenounproject.com/term/care/1309510/">https://thenounproject.com/term/care/1309510</a></li>
+
+					<li>Deluvio, Charles. Photo of cactus in a white planter [Photo]. Retrieved from <a href="https://unsplash.com/photos/_78djVBBQIQ">https://unsplash.com/photos/_78djVBBQIQ</a></li>
+
+					<li>Loup, Alex. Photo of eucalyptus in pink planter [Photo]. Retrieved from <a href="https://unsplash.com/photos/6hgrfOJhr74">https://unsplash.com/photos/6hgrfOJhr74</a></li>
+
+					<li>Bui, Mong. Photo of aloe in wood planter [Photo]. Retrieved from <a href="https://unsplash.com/photos/NznxEfw9iVI">https://unsplash.com/photos/NznxEfw9iVI</a></li>
 				</ul>
 
 		</section> 
