Changed images, refined code

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 		<section class="alternating-content grid">
 			<section class="location">
 				<div class ="alternating-content-img col-1of2">
-					<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
+					<img src="img/map.png" alt="Photo of store's location on Google Maps">
 				</div>
 				<div class ="alternating-content-text col-2of2">
 					<h2>Our location</h2>
@@ -128,10 +128,13 @@
 			 <div class="child-footer contact">
 				 <h3 class="web">CONTACT US</h3>
 				 <p>(604) 738-0678</p>
-				 <p><i class="fab fa-instagram"></i> 
-				 	<a href="https://www.instagram.com/fourseasonsfloristry"> Instagram</a>
+				 <p>
+				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
 				 </p>
-				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
+				 <p>
+				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
+				 </p>
+
 			 </div>
 		 	</div>
 	 	</section>
