--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<!-- <div class ="grid"> -->
 			<div class ="menu">
 				<a href="shop.html">
-					<img src="img/patterns/pattern.png" alt="Pattern floral background">
+					<img src="img/flower-tile.png" alt="Photo of pink peonies">
 					<p>Flowers</p>
 				</a>
 			</div>
@@ -72,14 +72,14 @@
 
 			<div class ="menu">
 				<a href="shop-plants.html">
-					<img src="img/patterns/pattern-2.png" alt="Pattern plant background">
+					<img src="img/plants-tile.jpg" alt="Photo of green plant">
 					<p>Plants</p>
 				</a>
 			</div>
 
 			<div class ="menu">
 				<a href="shop.html">
-					<img src="img/patterns/pattern-3.png" alt="Pattern leaf background">
+					<img src="img/services-tile.jpg" alt="Photo of flowers on a white barrel for an event">
 					<p>Services</p>
 				</a>
 			</div>
@@ -136,14 +136,18 @@
 			 <div class="child-footer contact">
 				 <h3 class="web">CONTACT US</h3>
 				 <p>(604) 738-0678</p>
-				 <p><i class="fab fa-instagram"></i> Instagram</p>
-				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
+				 <p>
+				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
+				 </p>
+				 <p>
+				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
+				 </p>
 			 </div>
 		 	</div>
 	 	</section>
 
  		<div class="sub-footer">
-	 		<p>	Made with love in Vancouver, B.C.
+	 		<p>	
 	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
 	 			<a href="citations.html" target="_blank"> Citations</a>
 	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
