--- a/shop-plants.html
+++ b/shop-plants.html
@@ -110,8 +110,12 @@
 			 <div class="child-footer contact">
 				 <h3 class="web">CONTACT US</h3>
 				 <p>(604) 738-0678</p>
-				 <p><i class="fab fa-instagram"></i> Instagram</p>
-				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
+				 <p>
+				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
+				 </p>
+				 <p>
+				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
+				 </p>
 			 </div>
 		 	</div>
 	 	</section>
