Added plant product page

--- a/shop.html
+++ b/shop.html
@@ -61,54 +61,66 @@
 		<!----- Products ---->
 		<section class ="grid products">
 				<div class ="product-item col-1of3">
-				  	 <img src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
-				  	  <!-- <div class="container-title"> -->
-				  	 	 <p class="product-name">Lover's Sunrise</p>
-				  	  <!-- </div> -->
-					 	 <p class ="price">$45.99</p>
-					 	 <a class ="btn-add" href="detailed-product.html"> + Add </a>
+				  	 <a href="detailed-product.html">
+					  	 <img src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
+					  	  <!-- <div class="container-title"> -->
+					  	 	 <p class="product-name">Lover's Sunrise</p>
+					  	  <!-- </div> -->
+						 	 <p class ="price">$45.99</p>
+						 	 <a class ="btn-add" href="cart.html"> + Add </a>
 
-					  <!-- <div class="btn-position">
-							<a class ="btn-add" href="detailed-product.html"> + Quick Add </a>
-				 	  </div> -->
+						  <!-- <div class="btn-position">
+								<a class ="btn-add" href="detailed-product.html"> + Quick Add </a>
+					 	  </div> -->
+				 	</a>
 				</div>
 
 				<div class ="product-item col-2of3">
-				  	 <img src="img/products/red-bouquet.jpg" alt="Photo of red bouquet">
-				  	  <p class="product-name">Radiantly Rouge</p>
-					  <p class ="price">$55.99</p>
-					  <a class ="btn-add" href="detailed-product-2.html"> + Add </a>
+					<a href="detailed-product-2.html">
+					  	 <img src="img/products/red-bouquet.jpg" alt="Photo of red bouquet">
+					  	  <p class="product-name">Radiantly Rouge</p>
+						  <p class ="price">$55.99</p>
+						  <a class ="btn-add" href="cart.html"> + Add </a>
+					</a>
 
 				</div>
 
 				<div class ="product-item col-3of3">
-				  	 <img src="img/products/light-pink-bouquet.jpg" alt="Photo of light pink bouquet">
-				  	  <p class="product-name">English Gardens</p>
-					  <p class ="price">$48.99</p>
-					  <a class ="btn-add" href="detailed-product.html"> + Add </a>
+					<a href="detailed-product-2.html">
+					  	 <img src="img/products/light-pink-bouquet.jpg" alt="Photo of light pink bouquet">
+					  	  <p class="product-name">English Gardens</p>
+						  <p class ="price">$48.99</p>
+						  <a class ="btn-add" href="cart.html"> + Add </a>
+					</a>
 				</div>
 		<!-- </section> -->
 
 		<!-- <section class ="grid products"> -->
 			<div class ="product-item col-1of3">
-			  	 <img src="img/products/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
-			  	  <p class="product-name">Just Keep Swimming</p>
-				  <p class ="price">$45.99</p>
-				  <a class ="btn-add" href="detailed-product.html"> + Add </a>
+				<a href="detailed-product-2.html">
+				  	 <img src="img/products/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
+				  	  <p class="product-name">Just Keep Swimming</p>
+					  <p class ="price">$45.99</p>
+					  <a class ="btn-add" href="cart.html"> + Add </a>
+				</a>
 			</div>
 
 			<div class ="product-item col-2of3">
-			  	 <img src="img/products/lavender-bouquet.jpg" alt="Photo of purple bouquet">
-			  	  <p class="product-name">Lavender Dreams</p>
-				  <p class ="price">$40.99</p>
-				  <a class ="btn-add" href="detailed-product.html"> + Add </a>
+				<a href="detailed-product-2.html">
+				  	 <img src="img/products/lavender-bouquet.jpg" alt="Photo of purple bouquet">
+				  	  <p class="product-name">Lavender Dreams</p>
+					  <p class ="price">$40.99</p>
+					  <a class ="btn-add" href="cart.html"> + Add </a>
+				</a>
 			</div>
 
 			<div class ="product-item col-2of3">
-			  	 <img src="img/products/summer-bouquet.jpg" alt="Photo of purple bouquet">
-			  	  <p class="product-name">Spirit of Summer</p>
-				  <p class ="price">$44.99</p>
-				 <a class ="btn-add" href="detailed-product.html"> + Add </a>
+				<a href="detailed-product-2.html">
+				  	 <img src="img/products/summer-bouquet.jpg" alt="Photo of purple bouquet">
+				  	  <p class="product-name">Spirit of Summer</p>
+					  <p class ="price">$44.99</p>
+					 <a class ="btn-add" href="cart.html"> + Add </a>
+				</a>
 			</div>
 		</section>
 
