--- a/detailed-product-2.html
+++ b/detailed-product-2.html
@@ -58,7 +58,7 @@
 			<div class="product-desc col-2of2">
 				<div class= "container-title">
 					<h2>Radiantly Rouge</h2>
-					<h2 class="price"> 55.99 </h2>
+					<h2 class="price">$55.99 </h2>
 				</div>
 			  	<div class="review-star-rating">
 		              <p>&#9733;</p>
