--- a/detailed-product-plant.html
+++ b/detailed-product-plant.html
@@ -53,12 +53,12 @@
 		<!----- Detailed Product ----->
 		<section class="detailed-product grid">
 			<div class="product-img col-1of2">
-				<img src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
+				<img src="img/products/mong-bui.jpg" alt="Photo of an aloe succulent in a wooden planter">
 			</div>
 			<div class="product-desc col-2of2">
 				<div class= "container-title">
-					<h2>Lover's Sunrise</h2>
-					<h2 class="price"> $45</h2>
+					<h2>Aloe Succulent</h2>
+					<h2 class="price"> $9.99 </h2>
 				</div>
 			  	<div class="review-star-rating">
 		              <p>&#9733;</p>
@@ -66,7 +66,7 @@
 		              <p>&#9733;</p>
 		              <p>&#9733;</p>
 		              <p>&#9733;</p>
-		              <p> <a href="#">(15)</a>
+		              <p> <a href="#">(5)</a>
 	           	</div>
 		
 				<!-- Select tag retrieved from https://www.w3schools.com/tags/tag_select.asp -->
@@ -85,7 +85,7 @@
 				</form>
 
 				<p>
-					This lovely pastel bouquet features fuchsia peonies, light pink roses chrysanthemums and carnations, pink lilies, magenta gerbaras and eucalyptus that can either be wrapped beautifully in recyclable paper or in a reusable glass vase.
+					Brighten up your living space with an aloe plant. This little succulent survives on little maintenance but reaps huge benefits for your well-being and environment.
 				</p>
 				<a href="cart.html"><button type="button" class="btn-main">Add to Cart</button></a>
 			</div> <!--.product-desc ends -->
@@ -94,7 +94,7 @@
 
 		<!-- Review Section -->
 		 <section class="review">
-	      	  <h2> Reviews <a href="#">(15)</a></h2>
+	      	  <h2> Reviews <a href="#">(7)</a></h2>
 
 	      	  <button class="btn-main">Write a Review</button>
 
